# TheoryOfComputingGUI

./: .gitignore  .gitmodules  CMakeLists.txt
assets/fonts/: LeedUni-Licence.txt
include/: AST.h  Converter.h  Graph.h  GraphNode.h  States.h
src/: main.cpp
src/objects/: AST.cpp  Converter.cpp  Graph.cpp  GraphNode.cpp
